[gd_scene load_steps=5 format=3 uid="uid://bidj3gqy8ktma"]

[ext_resource type="Script" path="res://effects/space_background.gd" id="1_c6qra"]
[ext_resource type="Texture2D" uid="uid://dyt2cytvf6wac" path="res://assets/space.png" id="1_fchdw"]
[ext_resource type="Texture2D" uid="uid://cg3mgmat6y22l" path="res://assets/far_stars.png" id="2_a6288"]
[ext_resource type="Texture2D" uid="uid://cgwguhc2ke258" path="res://assets/close_stars.png" id="3_gw55n"]

[node name="SpaceBackground" type="ParallaxBackground"]
script = ExtResource("1_c6qra")

[node name="SpaceLayer" type="ParallaxLayer" parent="."]
unique_name_in_owner = true
motion_mirroring = Vector2(0, 240)

[node name="Space" type="TextureRect" parent="SpaceLayer"]
offset_right = 160.0
offset_bottom = 240.0
texture = ExtResource("1_fchdw")
stretch_mode = 1

[node name="FarStartsLayer" type="ParallaxLayer" parent="."]
unique_name_in_owner = true
motion_mirroring = Vector2(0, 240)

[node name="TextureRect" type="TextureRect" parent="FarStartsLayer"]
offset_right = 160.0
offset_bottom = 240.0
texture = ExtResource("2_a6288")
stretch_mode = 1

[node name="CloseStartsLayer" type="ParallaxLayer" parent="."]
unique_name_in_owner = true
motion_mirroring = Vector2(0, 240)

[node name="TextureRect" type="TextureRect" parent="CloseStartsLayer"]
offset_right = 160.0
offset_bottom = 240.0
texture = ExtResource("3_gw55n")
stretch_mode = 1
